Cleanup, small refactor